# edge-flow

./: LICENSE  README.md  makefile
.github/workflows/: test.yml
docs/: intro.md
docs/messaging/: docs.md
edge-flow/: Cargo.toml
edge-flow/messaging/: .env  Cargo.toml
edge-flow/messaging/examples/: client.rs  service.rs  simple_subscriber.rs  temperature_monitor.rs
edge-flow/messaging/lib/: Cargo.toml
edge-flow/messaging/lib/src/: config.rs  models.rs  subscriber.rs  topic.rs
edge-flow/messaging/src/: batch.rs  config.rs  duration_unit.rs  error.rs  lib.rs  main.rs  models.rs  queue.rs  subscriber.rs  topic.rs
edge-flow/messaging/src/client/: mod.rs  publisher.rs  subscriber.rs
edge-flow/messaging/src/prelude/: batch.rs  config.rs  error.rs  mod.rs  models.rs  queue.rs  subscriber.rs  topic.rs
edge-flow/messaging/src/service/: bridge.rs  handlers.rs  mod.rs  topics.rs
