[package]
name = "messaging"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Edge Flow messaging library providing generic pub/sub capabilities"
license = "MIT"

[[example]]
name = "temperature_monitor"
path = "examples/temperature_monitor.rs"

[[example]]
name = "simple_subscriber"
path = "examples/simple_subscriber.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"
thiserror = "1.0.47"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tracing = "0.1.37"
futures = "0.3.28"
backoff = { version = "0.4.0", features = ["tokio"] }
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.13.0"
assert_matches = "1.5.0"
