[package]
name = "messaging"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo S de Carvalho"]
description = "Edge Flow messaging library providing generic pub/sub capabilities"
license = "MIT"

[[example]]
name = "temperature_monitor"
path = "examples/temperature_monitor.rs"

[[example]]
name = "simple_subscriber"
path = "examples/simple_subscriber.rs"

[[example]]
name = "service"
path = "examples/service.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
async-trait = "0.1.83"
thiserror = "1.0.65"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
axum = { version = "0.7.7", features = ["macros"]}
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15"
utoipa = { version = "5.1.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4.4"
assert_matches = "1.5.0"
